Fix closing tags in paper-badge.html

--- a/paper-badge.html
+++ b/paper-badge.html
@@ -27,8 +27,8 @@ Example:
     </div>
 
     <div>
-      <paper-button id="btn">Status</button>
-      <paper-badge for="btn" label="♥︎">b/paper-badge>
+      <paper-button id="btn">Status</paper-button>
+      <paper-badge for="btn" label="♥︎"></paper-badge>
     </div>
 
 ### Styling
