--- a/paper-badge.html
+++ b/paper-badge.html
@@ -86,6 +86,11 @@ Custom property | Description | Default
     Polymer({
       is: 'paper-badge',
 
+      hostAttributes: {
+        tabindex: '0',
+        role: 'status'
+      },
+
       behaviors: [
         Polymer.IronResizableBehavior
       ],
@@ -109,7 +114,8 @@ Custom property | Description | Default
          * should have very few characters.
          */
         label: {
-          type: String
+          type: String,
+          observer: '_labelChanged'
         }
       },
 
@@ -124,6 +130,10 @@ Custom property | Description | Default
           return;
         }
         this._updateTarget();
+      },
+
+      _labelChanged: function() {
+        this.setAttribute('aria-label', this.label);
       },
 
       _updateTarget: function() {
