--- a/paper-badge.html
+++ b/paper-badge.html
@@ -43,7 +43,7 @@ Custom property | Description | Default
 `--paper-badge-width` | The width of the badge circle | `22px`
 `--paper-badge-height` | The height of the badge circle | `22px`
 `--paper-badge-margin-left` | Optional spacing added to the left of the badge. | `0px`
-`--paper-badge-margin-bottom` | TOptional spacing added to the bottom of the badge. | `0px`
+`--paper-badge-margin-bottom` | Optional spacing added to the bottom of the badge. | `0px`
 `--paper-badge` | Mixin applied to the badge | `{}`
 
 @group Paper Elements
