Change tabindex '0' to 0

--- a/paper-badge.html
+++ b/paper-badge.html
@@ -108,8 +108,8 @@ Custom property | Description | Default
       is: 'paper-badge',
 
       hostAttributes: {
-        tabindex: '0',
-        role: 'status'
+        role: 'status',
+        tabindex: 0
       },
 
       behaviors: [
