--- a/paper-badge.html
+++ b/paper-badge.html
@@ -12,6 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
 <link rel="import" href="../paper-styles/default-theme.html">
+<link rel="import" href="../paper-styles/typography.html">
 
 <!--
 `<paper-badge>` is a circular text badge that is displayed on the top right
@@ -55,31 +56,28 @@ Custom property | Description | Default
   <template>
     <style>
       :host {
-        display: block;
-        position: absolute;
-        outline: none;
-      }
-
-      #badge {
-        @apply(--paper-font-common-base);
-        font-weight: normal;
-        font-size: 11px;
-        border-radius: 50%;
-        margin-left: var(--paper-badge-margin-left, 0px);
-        margin-bottom: var(--paper-badge-margin-bottom, 0px);
-        width: var(--paper-badge-width, 20px);
-        height: var(--paper-badge-height, 20px);
-        background-color: var(--paper-badge-background, --accent-color);
-        opacity: var(--paper-badge-opacity, 1.0);
-        color: var(--paper-badge-text-color, white);
         @apply(--layout);
         @apply(--layout-center-center);
+        @apply(--paper-font-common-base);
+
+        background-color: var(--paper-badge-background, --accent-color);
+        border-radius: 50%;
+        color: var(--paper-badge-text-color, white);
+        font-size: 11px;
+        font-weight: normal;
+        height: var(--paper-badge-height, 20px);
+        margin-bottom: var(--paper-badge-margin-bottom, 0px);
+        margin-left: var(--paper-badge-margin-left, 0px);
+        opacity: var(--paper-badge-opacity, 1.0);
+        outline: none;
+        position: absolute;
+        width: var(--paper-badge-width, 20px);
 
         @apply(--paper-badge);
       }
     </style>
 
-    <div id="badge">{{label}}</div>
+    {{label}}
   </template>
 
   <script>
