--- a/paper-badge.html
+++ b/paper-badge.html
@@ -12,6 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
 <link rel="import" href="../paper-styles/default-theme.html">
+<link rel="import" href="../paper-styles/typography.html">
 
 <!--
 `<paper-badge>` is a circular text badge that is displayed on the top right
@@ -77,7 +78,10 @@ Custom property | Description | Default
       }
 
       .badge {
+        @apply(--layout);
+        @apply(--layout-center-center);
         @apply(--paper-font-common-base);
+
         font-weight: normal;
         font-size: 11px;
         border-radius: 50%;
@@ -88,8 +92,6 @@ Custom property | Description | Default
         background-color: var(--paper-badge-background, --accent-color);
         opacity: var(--paper-badge-opacity, 1.0);
         color: var(--paper-badge-text-color, white);
-        @apply(--layout);
-        @apply(--layout-center-center);
 
         @apply(--paper-badge);
       }
