--- a/demo/index.html
+++ b/demo/index.html
@@ -84,7 +84,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </template>
     </demo-snippet>
 
-    <h3>Badges can be customized</h3>
+    <h3>Badges can be customized using custom properties</h3>
     <demo-snippet class="centered-demo">
       <template>
         <paper-icon-button id="number2" icon="communication:email" alt="inbox">
