Remove unused arg

--- a/paper-badge.html
+++ b/paper-badge.html
@@ -159,7 +159,7 @@ Custom property | Description | Default
         this._updateTarget();
       },
 
-      attributeChanged: function (name, type) {
+      attributeChanged: function (name) {
         if (name === 'hidden') {
           this.updatePosition();
         }
