--- a/paper-badge.html
+++ b/paper-badge.html
@@ -9,6 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
 <link rel="import" href="../paper-styles/default-theme.html">
@@ -159,7 +160,7 @@ Custom property | Description | Default
         this._updateTarget();
       },
 
-      attributeChanged: function (name, type) {
+      attributeChanged: function (name) {
         if (name === 'hidden') {
           this.updatePosition();
         }
