Fix label position when using Shadow DOM.

--- a/paper-badge.html
+++ b/paper-badge.html
@@ -73,7 +73,7 @@ Custom property | Description | Default
         outline: none;
       }
 
-      :host([hidden]) {
+      :host([hidden]), [hidden] {
         display: none !important;
       }
 
