--- a/paper-badge.html
+++ b/paper-badge.html
@@ -83,9 +83,9 @@ Custom property | Description | Default
       }
 
       .badge {
-        @apply(--layout);
-        @apply(--layout-center-center);
-        @apply(--paper-font-common-base);
+        @apply --layout;
+        @apply --layout-center-center;
+        @apply --paper-font-common-base;
 
         font-weight: normal;
         font-size: 11px;
@@ -94,11 +94,11 @@ Custom property | Description | Default
         margin-bottom: var(--paper-badge-margin-bottom, 0px);
         width: var(--paper-badge-width, 20px);
         height: var(--paper-badge-height, 20px);
-        background-color: var(--paper-badge-background, --accent-color);
+        background-color: var(--paper-badge-background, var(--accent-color));
         opacity: var(--paper-badge-opacity, 1.0);
         color: var(--paper-badge-text-color, white);
 
-        @apply(--paper-badge);
+        @apply --paper-badge;
       }
     </style>
 
@@ -157,7 +157,9 @@ Custom property | Description | Default
       },
 
       attached: function() {
-        this._updateTarget();
+        requestAnimationFrame(function() {
+          this._updateTarget();
+        }.bind(this));
       },
 
       attributeChanged: function (name) {
@@ -220,11 +222,9 @@ Custom property | Description | Default
        * you've manually done a page re-layout).
        */
       updatePosition: function() {
-        if (!this._target)
+        if (!this._target || !this.offsetParent) {
           return;
-
-        if (!this.offsetParent)
-          return;
+        }
 
         var parentRect = this.offsetParent.getBoundingClientRect();
         var targetRect = this._target.getBoundingClientRect();
