fixed hidden attribute tests

--- a/paper-badge.html
+++ b/paper-badge.html
@@ -153,6 +153,14 @@ Custom property | Description | Default
         icon: {
           type: String,
           value: ''
+        },
+
+        /**
+         * Treated as the hidden attribute.
+         */
+        hidden: {
+          type: Boolean,
+          reflectToAttribute: true
         }
       },
 
