--- a/test/basic.html
+++ b/test/basic.html
@@ -94,6 +94,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         expect(badge.target.getAttribute('id')).to.be.equal('target');
 
+        // we are waiting for rAF to prevent flakiness that comes associated
+        // with offsetParent not being calculated correctly in 2.0
         requestAnimationFrame(function() {
           badge.updatePosition();
 
@@ -134,6 +136,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         expect(contentRect.width).to.be.equal(0);
         expect(contentRect.height).to.be.equal(0);
 
+        // we are waiting for rAF to prevent flakiness that comes associated
+        // with offsetParent not being calculated correctly in 2.0
         requestAnimationFrame(function() {
           badge.removeAttribute('hidden');
 
@@ -169,6 +173,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         expect(badge.target.getAttribute('id')).to.not.be.equal('target');
 
+        // we are waiting for rAF to prevent flakiness that comes associated
+        // with offsetParent not being calculated correctly in 2.0
         requestAnimationFrame(function() {
           var contentRect = badge.getBoundingClientRect();
           expect(contentRect.left).to.not.be.equal(100 - 11);
@@ -209,6 +215,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         expect(badge.target.getAttribute('id')).to.be.equal('target');
 
+        // we are waiting for rAF to prevent flakiness that comes associated
+        // with offsetParent not being calculated correctly in 2.0
         requestAnimationFrame(function() {
           badge.updatePosition();
 
@@ -239,6 +247,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         var f = fixture('icon-badge');
         var badge = f.querySelector('paper-badge');
 
+        // we are waiting for rAF to prevent flakiness that comes associated
+        // with offsetParent not being calculated correctly in 2.0
         requestAnimationFrame(function() {
           var icon = Polymer.dom(badge.root).querySelector('iron-icon');
           expect(icon).not.to.be.null;
@@ -254,6 +264,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           var badge = f.$.badge;
           var actualbadge = Polymer.dom(badge.root).querySelector('.badge');
 
+          // we are waiting for rAF to prevent flakiness that comes associated
+          // with offsetParent not being calculated correctly in 2.0
           requestAnimationFrame(function() {
             badge.updatePosition();
 
