Removed tab-index to fix issue #63: paper-badge has a tabindex while it shouldn't because of role=status

--- a/paper-badge.html
+++ b/paper-badge.html
@@ -113,8 +113,7 @@ Custom property | Description | Default
       is: 'paper-badge',
 
       hostAttributes: {
-        role: 'status',
-        tabindex: 0
+        role: 'status'
       },
 
       behaviors: [
