allow grow in width for labels with four or more characters

--- a/paper-badge.html
+++ b/paper-badge.html
@@ -92,7 +92,7 @@ Custom property | Description | Default
         border-radius: 50%;
         margin-left: var(--paper-badge-margin-left, 0px);
         margin-bottom: var(--paper-badge-margin-bottom, 0px);
-        width: var(--paper-badge-width, 20px);
+        min-width: var(--paper-badge-width, 20px);
         height: var(--paper-badge-height, 20px);
         background-color: var(--paper-badge-background, var(--accent-color));
         opacity: var(--paper-badge-opacity, 1.0);
