--- a/test/basic.html
+++ b/test/basic.html
@@ -14,10 +14,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <title>paper-badge tests</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-  <script src="../../../wct-browser-legacy/browser.js"></script>
-  <script type="module" src="../paper-badge.js"></script>
-  <script type="module" src="./test-button.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+  <script src="../node_modules/wct-browser-legacy/browser.js"></script>
 
 </head>
 <style>
@@ -86,141 +84,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </test-fixture>
 
   <script type="module">
-import '../paper-badge.js';
-import './test-button.js';
-import { dom } from '@polymer/polymer/lib/legacy/polymer.dom.js';
-suite('basic', function() {
-  test('badge is positioned correctly', function(done) {
-    var f = fixture('basic');
-    var badge = f.querySelector('paper-badge');
-    var actualbadge = dom(badge.root).querySelector('.badge');
+    import '../paper-badge.js';
+    import './test-button.js';
+    import {dom} from '@polymer/polymer/lib/legacy/polymer.dom.js';
 
-    expect(badge.target.getAttribute('id')).to.be.equal('target');
-
-    // we are waiting for rAF to prevent flakiness that comes associated
-    // with offsetParent not being calculated correctly in 2.0
-    requestAnimationFrame(function() {
-      badge.updatePosition();
-
-      requestAnimationFrame(function() {
-        assert.equal(actualbadge.textContent.trim(), '1');
-
-        var divRect = f.querySelector('#target').getBoundingClientRect();
-        expect(divRect.width).to.be.equal(100);
-        expect(divRect.height).to.be.equal(20);
-
-        var contentRect = badge.getBoundingClientRect();
-        expect(contentRect.width).to.be.equal(20);
-        expect(contentRect.height).to.be.equal(20);
-
-        // The target div is 100 x 20, and the badge is centered on the
-        // top right corner.
-        expect(contentRect.left).to.be.equal(100 - 10);
-        expect(contentRect.top).to.be.equal(0 - 10);
-
-        // Also check the math, just in case.
-        expect(contentRect.left).to.be.equal(divRect.width - 10);
-        expect(contentRect.top).to.be.equal(divRect.top - 10);
-
-        done();
-      });
-    });
-  });
-
-  test(
-      'badge is positioned correctly after initially being hidden',
-      function(done) {
-        var f = fixture('initially-hidden');
+    suite('basic', function() {
+      test('badge is positioned correctly', function(done) {
+        var f = fixture('basic');
         var badge = f.querySelector('paper-badge');
         var actualbadge = dom(badge.root).querySelector('.badge');
-
-        expect(badge.target.getAttribute('id')).to.be.equal('target');
-
-        // Badge is initially hidden.
-        var contentRect = badge.getBoundingClientRect();
-        expect(contentRect.width).to.be.equal(0);
-        expect(contentRect.height).to.be.equal(0);
-
-        // we are waiting for rAF to prevent flakiness that comes associated
-        // with offsetParent not being calculated correctly in 2.0
-        requestAnimationFrame(function() {
-          badge.removeAttribute('hidden');
-
-          requestAnimationFrame(function() {
-            assert.equal(actualbadge.textContent.trim(), '1');
-
-            var divRect = f.querySelector('#target').getBoundingClientRect();
-            expect(divRect.width).to.be.equal(100);
-            expect(divRect.height).to.be.equal(20);
-
-            contentRect = badge.getBoundingClientRect();
-            expect(contentRect.width).to.be.equal(20);
-            expect(contentRect.height).to.be.equal(20);
-
-            // The target div is 100 x 20, and the badge is centered on the
-            // top right corner.
-            expect(contentRect.left).to.be.equal(100 - 10);
-            expect(contentRect.top).to.be.equal(0 - 10);
-
-            // Also check the math, just in case.
-            expect(contentRect.left).to.be.equal(divRect.width - 10);
-            expect(contentRect.top).to.be.equal(divRect.top - 10);
-
-            done();
-          });
-        });
-      });
-
-  test(
-      'badge is positioned correctly after being dynamically set',
-      function(done) {
-        var f = fixture('dynamic');
-        var badge = f.querySelector('paper-badge');
-        badge.updatePosition();
-
-        expect(badge.target.getAttribute('id')).to.not.be.equal('target');
-
-        // we are waiting for rAF to prevent flakiness that comes associated
-        // with offsetParent not being calculated correctly in 2.0
-        requestAnimationFrame(function() {
-          var contentRect = badge.getBoundingClientRect();
-          expect(contentRect.left).to.not.be.equal(100 - 11);
-
-          badge.for = 'target';
-          expect(badge.target.getAttribute('id')).to.be.equal('target');
-
-          requestAnimationFrame(function() {
-            badge.updatePosition();
-
-            requestAnimationFrame(function() {
-              var divRect = f.querySelector('#target').getBoundingClientRect();
-              expect(divRect.width).to.be.equal(100);
-              expect(divRect.height).to.be.equal(20);
-
-              var contentRect = badge.getBoundingClientRect();
-              expect(contentRect.width).to.be.equal(20);
-              expect(contentRect.height).to.be.equal(20);
-
-              // The target div is 100 x 20, and the badge is centered on the
-              // top right corner.
-              expect(contentRect.left).to.be.equal(100 - 10);
-              expect(contentRect.top).to.be.equal(0 - 10);
-
-              // Also check the math, just in case.
-              expect(contentRect.left).to.be.equal(divRect.width - 10);
-              expect(contentRect.top).to.be.equal(divRect.top - 10);
-
-              done();
-            });
-          });
-        });
-      });
-
-  test(
-      'badge is positioned correctly when nested in a target element',
-      function(done) {
-        var f = fixture('nested');
-        var badge = f.querySelector('paper-badge');
 
         expect(badge.target.getAttribute('id')).to.be.equal('target');
 
@@ -230,6 +102,8 @@ suite('basic', function() {
           badge.updatePosition();
 
           requestAnimationFrame(function() {
+            assert.equal(actualbadge.textContent.trim(), '1');
+
             var divRect = f.querySelector('#target').getBoundingClientRect();
             expect(divRect.width).to.be.equal(100);
             expect(divRect.height).to.be.equal(20);
@@ -252,58 +126,183 @@ suite('basic', function() {
         });
       });
 
-  test('badge displays icons correctly', function(done) {
-    var f = fixture('icon-badge');
-    var badge = f.querySelector('paper-badge');
+      test(
+          'badge is positioned correctly after initially being hidden',
+          function(done) {
+            var f = fixture('initially-hidden');
+            var badge = f.querySelector('paper-badge');
+            var actualbadge = dom(badge.root).querySelector('.badge');
 
-    // we are waiting for rAF to prevent flakiness that comes associated
-    // with offsetParent not being calculated correctly in 2.0
-    requestAnimationFrame(function() {
-      var icon = dom(badge.root).querySelector('iron-icon');
-      expect(icon).not.to.be.null;
-      expect(icon.icon).to.be.equal(badge.icon);
-      expect(badge.getAttribute('aria-label')).to.be.equal(badge.label);
-      done();
-    });
-  });
+            expect(badge.target.getAttribute('id')).to.be.equal('target');
 
-  suite('badge is inside a custom element', function() {
-    test('badge is positioned correctly', function(done) {
-      var f = fixture('custom');
-      var badge = f.$.badge;
-      var actualbadge = dom(badge.root).querySelector('.badge');
+            // Badge is initially hidden.
+            var contentRect = badge.getBoundingClientRect();
+            expect(contentRect.width).to.be.equal(0);
+            expect(contentRect.height).to.be.equal(0);
 
-      // we are waiting for rAF to prevent flakiness that comes associated
-      // with offsetParent not being calculated correctly in 2.0
-      requestAnimationFrame(function() {
-        badge.updatePosition();
+            // we are waiting for rAF to prevent flakiness that comes associated
+            // with offsetParent not being calculated correctly in 2.0
+            requestAnimationFrame(function() {
+              badge.removeAttribute('hidden');
 
+              requestAnimationFrame(function() {
+                assert.equal(actualbadge.textContent.trim(), '1');
+
+                var divRect = f.querySelector('#target').getBoundingClientRect();
+                expect(divRect.width).to.be.equal(100);
+                expect(divRect.height).to.be.equal(20);
+
+                contentRect = badge.getBoundingClientRect();
+                expect(contentRect.width).to.be.equal(20);
+                expect(contentRect.height).to.be.equal(20);
+
+                // The target div is 100 x 20, and the badge is centered on the
+                // top right corner.
+                expect(contentRect.left).to.be.equal(100 - 10);
+                expect(contentRect.top).to.be.equal(0 - 10);
+
+                // Also check the math, just in case.
+                expect(contentRect.left).to.be.equal(divRect.width - 10);
+                expect(contentRect.top).to.be.equal(divRect.top - 10);
+
+                done();
+              });
+            });
+          });
+
+      test(
+          'badge is positioned correctly after being dynamically set',
+          function(done) {
+            var f = fixture('dynamic');
+            var badge = f.querySelector('paper-badge');
+            badge.updatePosition();
+
+            expect(badge.target.getAttribute('id')).to.not.be.equal('target');
+
+            // we are waiting for rAF to prevent flakiness that comes associated
+            // with offsetParent not being calculated correctly in 2.0
+            requestAnimationFrame(function() {
+              var contentRect = badge.getBoundingClientRect();
+              expect(contentRect.left).to.not.be.equal(100 - 11);
+
+              badge.for = 'target';
+              expect(badge.target.getAttribute('id')).to.be.equal('target');
+
+              requestAnimationFrame(function() {
+                badge.updatePosition();
+
+                requestAnimationFrame(function() {
+                  var divRect = f.querySelector('#target').getBoundingClientRect();
+                  expect(divRect.width).to.be.equal(100);
+                  expect(divRect.height).to.be.equal(20);
+
+                  var contentRect = badge.getBoundingClientRect();
+                  expect(contentRect.width).to.be.equal(20);
+                  expect(contentRect.height).to.be.equal(20);
+
+                  // The target div is 100 x 20, and the badge is centered on the
+                  // top right corner.
+                  expect(contentRect.left).to.be.equal(100 - 10);
+                  expect(contentRect.top).to.be.equal(0 - 10);
+
+                  // Also check the math, just in case.
+                  expect(contentRect.left).to.be.equal(divRect.width - 10);
+                  expect(contentRect.top).to.be.equal(divRect.top - 10);
+
+                  done();
+                });
+              });
+            });
+          });
+
+      test(
+          'badge is positioned correctly when nested in a target element',
+          function(done) {
+            var f = fixture('nested');
+            var badge = f.querySelector('paper-badge');
+
+            expect(badge.target.getAttribute('id')).to.be.equal('target');
+
+            // we are waiting for rAF to prevent flakiness that comes associated
+            // with offsetParent not being calculated correctly in 2.0
+            requestAnimationFrame(function() {
+              badge.updatePosition();
+
+              requestAnimationFrame(function() {
+                var divRect = f.querySelector('#target').getBoundingClientRect();
+                expect(divRect.width).to.be.equal(100);
+                expect(divRect.height).to.be.equal(20);
+
+                var contentRect = badge.getBoundingClientRect();
+                expect(contentRect.width).to.be.equal(20);
+                expect(contentRect.height).to.be.equal(20);
+
+                // The target div is 100 x 20, and the badge is centered on the
+                // top right corner.
+                expect(contentRect.left).to.be.equal(100 - 10);
+                expect(contentRect.top).to.be.equal(0 - 10);
+
+                // Also check the math, just in case.
+                expect(contentRect.left).to.be.equal(divRect.width - 10);
+                expect(contentRect.top).to.be.equal(divRect.top - 10);
+
+                done();
+              });
+            });
+          });
+
+      test('badge displays icons correctly', function(done) {
+        var f = fixture('icon-badge');
+        var badge = f.querySelector('paper-badge');
+
+        // we are waiting for rAF to prevent flakiness that comes associated
+        // with offsetParent not being calculated correctly in 2.0
         requestAnimationFrame(function() {
-          assert.equal(actualbadge.textContent.trim(), '1');
-
-          var divRect = f.$.button.getBoundingClientRect();
-          expect(divRect.width).to.be.equal(100);
-          expect(divRect.height).to.be.equal(20);
-
-          var contentRect = badge.getBoundingClientRect();
-          expect(contentRect.width).to.be.equal(20);
-          expect(contentRect.height).to.be.equal(20);
-
-          // The target div is 100 x 20, and the badge is centered on the
-          // top right corner.
-          expect(contentRect.left).to.be.equal(100 - 10);
-          expect(contentRect.top).to.be.equal(0 - 10);
-
-          // Also check the math, just in case.
-          expect(contentRect.left).to.be.equal(divRect.width - 10);
-          expect(contentRect.top).to.be.equal(divRect.top - 10);
-
+          var icon = dom(badge.root).querySelector('iron-icon');
+          expect(icon).not.to.be.null;
+          expect(icon.icon).to.be.equal(badge.icon);
+          expect(badge.getAttribute('aria-label')).to.be.equal(badge.label);
           done();
         });
       });
+
+      suite('badge is inside a custom element', function() {
+        test('badge is positioned correctly', function(done) {
+          var f = fixture('custom');
+          var badge = f.$.badge;
+          var actualbadge = dom(badge.root).querySelector('.badge');
+
+          // we are waiting for rAF to prevent flakiness that comes associated
+          // with offsetParent not being calculated correctly in 2.0
+          requestAnimationFrame(function() {
+            badge.updatePosition();
+
+            requestAnimationFrame(function() {
+              assert.equal(actualbadge.textContent.trim(), '1');
+
+              var divRect = f.$.button.getBoundingClientRect();
+              expect(divRect.width).to.be.equal(100);
+              expect(divRect.height).to.be.equal(20);
+
+              var contentRect = badge.getBoundingClientRect();
+              expect(contentRect.width).to.be.equal(20);
+              expect(contentRect.height).to.be.equal(20);
+
+              // The target div is 100 x 20, and the badge is centered on the
+              // top right corner.
+              expect(contentRect.left).to.be.equal(100 - 10);
+              expect(contentRect.top).to.be.equal(0 - 10);
+
+              // Also check the math, just in case.
+              expect(contentRect.left).to.be.equal(divRect.width - 10);
+              expect(contentRect.top).to.be.equal(divRect.top - 10);
+
+              done();
+            });
+          });
+        });
+      });
     });
-  });
-});
-</script>
+  </script>
 </body>
 </html>
