--- a/test/basic.html
+++ b/test/basic.html
@@ -74,6 +74,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </template>
   </test-fixture>
 
+  <test-fixture id="icon-badge-large">
+    <template>
+      <!-- Necessary to configure the paper-badge and iron-icon dimensions -->
+      <style is="custom-style">
+        paper-badge.large {
+          --paper-badge-width: 30px;
+          --paper-badge-height: 30px;
+          margin-left: 5px;
+        }
+        paper-badge.large-icon {
+          --paper-badge-icon-width: 29px;
+          --paper-badge-icon-height: 29px;
+        }
+      </style>
+
+      <paper-badge icon="social:mood" label="happy" class="large large-icon">
+    </template>
+  </test-fixture>
+
   <test-fixture id="initially-hidden">
     <template>
       <div style="position:relative">
@@ -266,6 +285,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         });
       });
 
+      test('badge icon dimensions can be configured', function(done) {
+        var f = fixture('icon-badge-large');
+        var badge = f[1];   // style is the first item and paper-badge the second.
+        requestAnimationFrame(function() {
+          var icon = dom(badge.root).querySelector('iron-icon');
+          var iconRect = icon.getBoundingClientRect();
+          expect(icon).not.to.be.null;
+          expect(iconRect.width).to.equal(29);
+          expect(iconRect.height).to.equal(29);
+          done();
+        });
+      });
+
       suite('badge is inside a custom element', function() {
         test('badge is positioned correctly', function(done) {
           var f = fixture('custom');
@@ -276,7 +308,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           // with offsetParent not being calculated correctly in 2.0
           requestAnimationFrame(function() {
             badge.updatePosition();
-
             requestAnimationFrame(function() {
               assert.equal(actualbadge.textContent.trim(), '1');
 
